<resources>
    <string name="app_name">Venyoo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="leads">Заявки</string>
    <string name="chat">Чат</string>
    <string name="settings">Настройки</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="exit">Выход</string>
    <string name="phone">Телефон</string>
    <string name="mail">Почта</string>
    <string name="sms">Смс</string>
    <string name="lead_seen">Заявка просмотрена</string>
    <string name="not_connected">Не подключены</string>
    <string name="connected">Подключены</string>
    <string name="from_email">Из почты</string>
    <string name="from_crm">Из CRM</string>
    <string name="not_seen">Не просмотрена</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="do_you_want_to_exit">Вы действительно хотите выйти из программы?</string>
    <string name="exit_hint">Нажмите кнопку НАЗАД снова, чтобы выйти из приложения</string>
    <string name="login_error_message">Неправильный логин или пароль</string>
    <string name="empty_fields">Неправильный логин или пароль</string>
    <string name="your_email">Ваш e-mail</string>
    <string name="your_password">Ваш пароль</string>
    <string name="remember_password_question">Забыли пароль?</string>
    <string name="enter">Войти</string>
    <string name="network_problems">Ошибка! Проверьте интернет-соединение</string>
    <string name="city">Город</string>
    <string name="social_profile">Профиль в соц.сети</string>
    <string name="city_by_ip">Город, определенный по IP</string>
    <string name="send_device">Устройство, с которого отправлена заявка</string>
    <string name="from_computer">С компьютера</string>
    <string name="from_mobile">С мобильного телефона</string>
    <string name="client_select">Клиент указал</string>
    <string name="we_define">Мы определили</string>
    <string name="lead_sent">Заявку отправили с</string>
    <string name="loading">Загрузка...</string>
    <string name="retry">Повторить попытку</string>
</resources>
