<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/leadUserImageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="4dp"
                    android:src="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/leadUserImageView"
                    android:layout_toRightOf="@id/leadUserImageView"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/leadUserPhoneTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/leadUserCityTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/leadUserQuestionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/leadUserDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/generalGray" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/leadUserPhoneFieldTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/linkBlue" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/generalGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail" />

            <TextView
                android:id="@+id/leadUserMailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/linkBlue" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/generalGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms" />

            <TextView
                android:id="@+id/leadUserSmsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/generalGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lead_seen" />

            <TextView
                android:id="@+id/leadUserSeenTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Из CRM" />

        </LinearLayout>


    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/callButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="24dp"
        android:backgroundTint="@color/greenCall"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_call_white" />

</RelativeLayout>